--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "7.9.1"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
@@ -24,7 +25,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "postcss": "8.4.49",
-    "tailwindcss": "3.4.16",
+    "tailwindcss": "4.1.13",
     "typescript": "^5.7.2",
     "vite": "^6.0.3"
   }
